--- a/demo/content/list/index.html
+++ b/demo/content/list/index.html
@@ -3,13 +3,15 @@
 <head>
     <title>content list demo</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/dist/0.5c174a5e.css" />
-    <link rel="stylesheet" href="/dist/content-list.ba1edc3f.css" />
+    <link rel="stylesheet" href="/dll/antd.6a82a8d3.css" />
+    <link rel="stylesheet" href="/dist/common.3f3ece9b.css" />
 </head>
 <body>
     <div id="root"></div>
     <script src="/demo/jquery.min.js"></script>
-    <script src="/dist/vendors.687a5c32.js"></script>
-    <script src="/dist/content-list.687a5c32.js"></script>
+    <script src="/dll/antd.9d696842.js"></script>
+    <script src="/dll/runtime.9d696842.js"></script>
+    <script src="/dist/common.381a37cc.js"></script>
+    <script src="/dist/content-list.381a37cc.js"></script>
 </body>
 </html>
