--- a/demo/content/detail/index.html
+++ b/demo/content/detail/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-dpr="1">
 <head>
-    <title>content list demo</title>
+    <title>content detail demo</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/dll/antd.6a82a8d3.css" />
     <link rel="stylesheet" href="/dist/common.1b68fdab.css" />
@@ -11,7 +11,7 @@
     <script src="/demo/jquery.min.js"></script>
     <script src="/dll/antd.9d696842.js"></script>
     <script src="/dll/runtime.9d696842.js"></script>
-    <script src="/dist/common.2a2d2203.js"></script>
-    <script src="/dist/content-list.2a2d2203.js"></script>
+    <script src="/dist/common.33451e15.js"></script>
+    <script src="/dist/content-detail.33451e15.js"></script>
 </body>
 </html>
